# cfb_betting

./: Cargo.toml  README.md  odds_cache.json
.github/workflows/: ci.yml
cache/: cbb_moneyline_arbitrage.csv  cbb_odds_cache.json  cfb_moneyline_arbitrage.csv  cfb_results_cache.json  moneyline_bets.csv  odds_cache.json  predictions_cache.json  spread_bets.csv
src/: lib.rs  main.rs
src/api/: game_results_api.rs  kalshi_api.rs  mod.rs  odds_api.rs
src/models/: mod.rs
src/scrapers/: espn_fpi.rs  mod.rs  prediction_tracker.rs  sagarin.rs
src/utils/: arbitrage.rs  data.rs  ev_analysis.rs  ev_calculator.rs  mod.rs
templates/: base.html  cbb.html  cbb_results.html  cfb.html  cfb_bet_results.html  cfb_moneyline.html  cfb_results.html  cfb_spread.html  home.html  index.html
