[package]
name = "cfb_betting_ev"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfb_betting_ev"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies]
# Template engine
askama = "0.12"
askama_axum = "0.4"

# Server framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }

# HTTP client for APIs and scraping
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing for web scraping
scraper = "0.21"

# Serialization
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async runtime
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenv = "0.15"
